--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
  body {
-      background-image: url('../images/bg.jpg');
+      /* background-image: url('../images/bg.jpg'); */
     }
 
 .purple { 
@@ -9,4 +11,10 @@
 
 .lesspurple {
   color:lightslategray;
+
+}
+    
+.groover {
+  font-family: 'Pacifico', cursive;
+  color: red;
 }
