--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
- body {
-      /* background-image: url('../images/bg.jpg'); */
-    }
+ /* body {
+      background-image: url('../images/bg.jpg');
+    } */
 
 p, li {
   font-family: Arial, Helvetica, sans-serif;
